Attempts to fix the header-stuck transitions

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -207,13 +207,12 @@ section[class*=' off-canvas-']{
     .header-sticky{
         width: 100%;
         z-index: 100;
-        transition: margin-top .15s ease-in-out, opacity .15s ease-in-out;
+        transition: background .1s ease-in-out, margin-top .15s ease-in-out, opacity .15s ease-in-out;
     }
     .header-overlay{
         position: absolute;
         width: 100%;
         z-index: 100;
-        transition: background .3s ease-in-out;
     }
     .header-sticky.is_stuck{
         margin-top: -30px;
